kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: price-service
  labels:
    app: price-service
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: price-service
  template:
    metadata:
      labels:
        app: price-service
    spec:
      containers:
        - name: price-service
          image: kubicrubic/price-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      restartPolicy: Always
