kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: price-service
spec:
  selector:
    app: price-service
#  type: NodePort
  ports:
    - name: price-service
      port: 8080
      targetPort: 8080
      protocol: TCP
#      nodePort: 32001
